// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParameterChip ParameterChip renders correctly with linked parameter 1`] = `
<WithStyles(ForwardRef(Chip))
  className="makeStyles-statusLinkedChip-3"
  label="Search"
/>
`;

exports[`ParameterChip ParameterChip renders correctly with unlinked parameter 1`] = `
<WithStyles(ForwardRef(Chip))
  className="makeStyles-statusNotLinkedChip-6"
  label="Search"
/>
`;

exports[`ParameterChip ParameterChip renders correctly without props 1`] = `
<WithStyles(ForwardRef(Chip))
  className="makeStyles-statusNotLinkedChip-2"
  label={null}
/>
`;
